--- a/src/components/JobFeed/JobView/index.css
+++ b/src/components/JobFeed/JobView/index.css
@@ -4,11 +4,20 @@
   color: #1a202c;
 }
 
-.listing h2 {
+.listing h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 10px;
   font-size: 16px;
   font-weight: 700;
   color: #4a5568;
+}
+
+.listing strong {
+  font-weight: 700;
 }
 
 .listing p {
